# Auth-rs

./: Cargo.toml  Run.sh
client/: package.json
client/src/: main.ts
client/src/components/: vuestic-logo.vue
client/src/components/navbar/: Navbar.vue
client/src/components/sidebar/: NavigationRoutes.js
client/src/i18n/: en.json  ir.json
client/src/pages/admin/dashboard/: Dashboard.vue
client/src/pages/admin/forms/addCompany/: addCompany.vue
client/src/pages/admin/maps/leaflet-maps/: LeafletMap.vue
client/src/pages/admin/tables/markup-tables/: companies.vue
client/src/pages/auth/login/: Login.vue
client/src/pages/auth/recover-password/: RecoverPassword.vue
client/src/pages/auth/signup/: Signup.vue
client/src/router/: index.ts
server/: .env  Cargo.toml  README.md
server/migrations/: 20220322_request_database.sql
server/src/: company.rs  login.rs  logout.rs  main.rs  signup.rs  user.rs  wallet.rs
src/: main.rs
src/migrations/: 20220322_request_database.sql
