cargo-features = ["edition2021"]


[package]
name = "RequestManager"
version = "0.1.0"
author = "farbodpm <farbod.peimanzadeh@gmail.com>"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio-postgres = "0.7.5"
sqlx = { version = "0.5", features = [ "mysql","runtime-tokio-rustls" ,"migrate"] }
crossbeam = "0.8.1"
bytes = "1"
dotenv="0.15.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#dotenv = "0.9.0"
serde_derive = "1.0"
futures-util = "0.3.21"


#[dependencies.rocket_contrib]
#version = "*"
#default-features = false
#features = ["json"]
